# UniversityAssignments

./: .gitignore  .gitmodules  README.md
Ansys/lab2/: CMakeLists.txt
ComputerGraphics/lab1/Assets/: sphereShader.shader
ComputerGraphics/lab1/Assets/Scenes/: sphereShader.shader
ComputerGraphics/lab2/Assets/: PlaneMaterial.mat  PlaneShader.shader
ComputerGraphics/lab2/Assets/Scenes/: SampleScene.unity
ComputerGraphics/lab2/ProjectSettings/: ProjectSettings.asset
DiscreteAndProbabilisticModels/CuttingPlaneMethod/: basiscalculator.h  canonicaladapter.cpp  canonicaladapter.h  canonicalsolver.cpp  canonicalsolver.h  coefficientsutils.h  cuttingplanemethod.cpp  cuttingplanemethod.h  fractpart.cpp  fractpart.h  fuzzycompare.cpp  globals.h  integerutils.h  main.cpp  simplexalgorithm.cpp  simplexalgorithm.h  simplexcoefficient.cpp  simplexcoefficient.h  solvecontext.h
LaTeX/: .gitignore
LaTeX/lab1/: sources.bib  sphere.tex
LaTeX/lab2/: presentation.tex
LaTeX/lab3/: presentation.tex
LaTeX/lab4/: poster.tex  sources.bib
LaTeX/lab5/: 2d_plot.py  2d_polar_plot.py  3d_plot_by_func.py  3d_plot_by_points.py  3d_plot_on_2d_surface.py  install_dislin.md
LaTeX/sphere/: refs.bib  sphere.tex
LinearProgramming/CuttingPlaneMethod/: CMakeLists.txt  basiscalculator.cpp  canonicaladapter.h  canonicalsolver.cpp  canonicalsolver.h  coefficientsutils.cpp  cuttingplanemethod.h  fuzzycompare.h  integerutils.cpp  main.cpp  solvecontext.cpp
MathematicalAndComputerModelingInFundamentalResearch/lab2/: main.cpp  report.docx
NeuralNetworks/lab1/: CMakeLists.txt  main.cpp  mainwindow.cpp  mainwindow.h  paintscene.cpp  paintscene.h  perceptron.cpp  perceptron.h
NeuralNetworks/lab2/: CancerDataset.py  Model.py  README.md  dataset.py  main.py
NeuralNetworks/lab3/: .gitignore  loader.py  main.py  network.py
NumericalAnalysis/: CMakeLists.txt  application.cpp  application.h  bisection_method.h  bisection_method_test.cpp  bisection_method_test.h  gradient_descent.h  gradient_descent_test.cpp  gradient_descent_test.h  main.cpp  main_window.cpp  main_window.h  out_utils.h  runge_kutta.h  runge_kutta_test.cpp  runge_kutta_test.h  symmetric_derivative_gradient.h  types.h
QuantumMechanics/lab1/: main.py  report.docx
QuantumMechanics/lab2/: main.py  report.docx
QuantumMechanics/lab3/: main.py  report.docx
SystemsEngineering/: hospital.archimate
Unity/lab1/Assets/: sphereShader.shader
Unity/lab1/Assets/Scenes/: SampleScene.unity  sphereMaterial.mat  sphereShader.shader
Unity/lab1/ProjectSettings/: ProjectSettings.asset
Unity/lab2/: report.docx
Unity/lab2/Assets/: PlaneMaterial.mat  PlaneShader.shader
Unity/lab2/Assets/Scenes/: SampleScene.unity
Unity/lab2/ProjectSettings/: ProjectSettings.asset
Unity/lab3/ProjectSettings/: ProjectSettings.asset
